--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <script>
       // GitHub Pages で直接アクセスされたときに index.html に回す
       const redirectTo = window.location.pathname.replace(/^\/[^\/]+/, '') + window.location.search + window.location.hash;
-      window.location.replace('/flashCard/index.html' + redirectTo);
+      window.location.replace('/your-repo-name/index.html' + redirectTo);
     </script>
   </head>
   <body>
