--- a/404.html
+++ b/404.html
@@ -1,14 +1,13 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script>
-      // GitHub Pages で直接アクセスされたときに index.html に回す
-      const redirectTo = window.location.pathname.replace(/^\/[^\/]+/, '') + window.location.search + window.location.hash;
-      window.location.replace('/flashCard/index.html' + redirectTo);
-    </script>
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React + TS</title>
   </head>
   <body>
-    <h1>Redirecting...</h1>
+    <div id="root"></div>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
